--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <article>
             <h2>Articles about the club</h2>
             <p class="article">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro temporibus dolorum,
-                perferendis aliquam ad mollitia amet, laborum asperiores reiciendis quisquam cumque iure, tempore
+                perferendis aliqnmbmnbnmsbdhjbdmnj hjashlj uam ad mollitia amet, laborum asperiores reiciendis quisquam cumque iure, tempore
                 consequatur exercitationem cum! Molestiae veniam officiis voluptatum! Lorem ipsum dolor sit amet
                 consectetur adipisicing elit. Voluptatum minus adipisci itaque dolores natus laborum, blanditiis
                 laboriosam voluptatibus atque ea animi, cumque dolor quos, sed reiciendis deserunt eaque ut alias! Lorem
@@ -45,7 +45,7 @@
                 provident tempora voluptatem molestiae sed quo similique tenetur! Dolorum, officia minus odit cum magni
                 veritatis. Ipsam porro corrupti placeat. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Numquam officia neque libero autem sapiente accusantium dignissimos quas? Rem eum quia deleniti sed
-                illum omnis, aspernatur velit et qui dolore magni!</p>
+                illum omnis, aspernatur velit et qui dolore magni! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat eaque est magni labore eius delectus perferendis veritatis ipsa, unde quia, accusamus vero! A facilis nesciunt iure error mollitia provident repellendus?</p>
         </article>
     </main>
     <ul class="images">
@@ -59,16 +59,20 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, impedit sed excepturi vitae quo itaque
             tempore provident quibusdam adipisci repellendus, quod totam neque? Excepturi itaque tempore magnam,
             voluptatibus consequatur maiores!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, impedit sed excepturi vitae quo itaque
+                tempore provident quibusdam adipisci repellendus, quod totam neque? Excepturi itaque tempore magnam,
+                voluptatibus consequatur maiores!</p>
+    
         <form>
             <input type="email" name="email" placeholder="enter email & hit enter" required>
         </form>
         </form>
     </section>
 
-    <footer>
-        <p class="copyright">Copyright by Hannah</p>
-    </footer>
-
+    <footer class="footer" style="height: 100%" weight="100% " background-color="blanditiis" color="white" align-text="center">
+		<h6 class="text-center text-white">Copyright © 2023</h6>
+		<h6 class="text-center text-white">Designed by Aanuoluwapo Akinyemi</h6>
+	</footer>
 
 
 
